# ShipSmart-Test

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  sibling.py
.github/workflows/: ci.yml
contract/: test_ai_event_trace.py  test_ai_trust_boundary.py  test_config_flags.py  test_contracts.py  test_coverage_completeness.py  test_decision_tags.py  test_feedback_contract.py  test_rag_corpus_refs.py  test_tool_policy_contract.py  test_typed_outputs.py
e2e/: conftest.py  test_admin_e2e.py  test_api_e2e.py  test_assistant_e2e.py  test_concierge_e2e.py  test_java_e2e.py  test_mcp_e2e.py  test_scope_e2e.py  test_workflow_e2e.py
evals/: README.md  __init__.py  alerts.py  calibration.py  case_model.py  coverage.yml  manifest.py  promotion.py  protocol.py  rigor.py  tag_vocabulary.yml  tags.py  telemetry.py  test_alerts.py  test_foundation.py  test_judge.py  test_promotion.py  test_tool_grading.py  trace.py
evals/config/: judge.yml
evals/datasets/: MANIFEST.yml
evals/datasets/agent/: tool_use.v1.jsonl
evals/datasets/product/: journeys.v1.jsonl
evals/docs/: ai-governance-scope.md  annotation-guide.md  incident-response.md  judge-calibration.md  online-loop.md
evals/graders/: __init__.py  llm_judge.py  rule_based.py  semantic.py
evals/reports/: .gitkeep
evals/runners/: __init__.py  merge_reports.py  run_lane.py  run_suite.py
postman/collections/: cross-service.postman_collection.json
postman/environments/: local.postman_environment.json
scripts/: run-stack.sh
(+8 files in other folders)
